# ai-service

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
k8s/base/: deployment.yaml  kustomization.yaml
src/: config.py  kafka_service.py  main.py
src/agents/: __init__.py  auto_parts.py  base.py  nurse.py  registry.py
